# eCommerce

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: auth.py  email.py  models.py
app/templates/: verified.html
